Sec8_Chap83-Testing Spring MVC Part2: miscellaneous code optimizations in Project 3.01-10